# Noctis

./: .env.example  .env.mainnet  .env.testnet  .gitignore  Cargo.toml  PRD.md  README.md  SECURITY.md  TESTNET_SETUP.md  VALIDATION_CHECKLIST.md  docker-compose.monitoring.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.planning/: DAILY_MONITORING_LOG.md  DAY_2_MAY28_EXECUTION_PLAN.md  DAY_2_MAY28_STANDUP_LOG.md  DEMO_DAY_JUN26_EXECUTION.md  DEV_008_COMPLETION_REPORT.md  DEV_008_STANDUP_MAY_27.md  FAUCET_PLAN.md  GOV_001_PROTOCOL_FEE_SWITCH.md  IMMEDIATE_ACTIONS_MAY28_JUN3.md  JUN_2_HARD_START.md  JUN_7_WEEK2_CRITICAL_SYNC.md  M3_MILESTONE_CHECK_JUN18.md  M4_M5_MILESTONE_CHECK_JUN22.md  MAY_29_30_SPEC_LOCK_PLAN.md  PM_DAILY_MONITORING.md  PM_GAP_ANALYSIS_MAY28.md  PM_HANDOFF_SUMMARY.md  PM_SPRINT1_READY_STATUS.md  PRD.md  PRD_SYNC_MAY29.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  QUICK_REFERENCE_CARD.md  QUICK_START_IMMEDIATE.md  README.md  README_TASK_HANDOFF.md  RES-002_CIRCUIT_SPEC.md  RES002_COMPLETION_SUMMARY.md  RES002_TO_DEV004_HANDOFF.md  SECURITY_AUDIT_FRAMEWORK.md  SEC_AUDIT_TRACKING.csv  SLACK_ANNOUNCEMENT_MAY27.md  SPRINT_1_CLOSE_JUN_10.md  SPRINT_1_DAY_1_COMPLETION_REPORT.md  SPRINT_1_EXECUTION_COMPLETE.md  SPRINT_1_SUMMARY.md  (+21 more)
contracts/confidential_payroll/: Cargo.toml
contracts/confidential_payroll/src/: lib.rs
contracts/confidential_payroll/test_snapshots/tests/: test_create_batch.1.json  test_create_batch_duplicate.1.json  test_create_batch_zero_amount.1.json  test_double_spend_prevention.1.json  test_initialize_and_get_root.1.json
(+151 files in other folders)
